--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       padding-left: 20px;
     }
     li {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
     .section {
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
     audio {
       display: none;
@@ -59,10 +59,75 @@
     <p>Kalamazoo, MI | 616.337.4017 | cadencarr.business@gmail.com</p>
   </header>
   <div class="container">
-    <!-- Content remains unchanged -->
-    [REMAINING HTML OMITTED FOR BREVITY - UNCHANGED]
+    <section class="section">
+      <h2>Education</h2>
+      <p><strong>Western Michigan University - Haworth College of Business</strong><br>
+      BBA, Computer Information Systems | Minor: Leadership & Business Strategy<br>
+      Kalamazoo, MI | Expected Dec 2026 | GPA: 3.80</p>
+    </section>
+
+    <section class="section">
+      <h2>Experience</h2>
+      <p><strong>WMUx</strong> — Student LAN Technician<br>Kalamazoo, MI | Jan 2024 – Present</p>
+      <ul>
+        <li>Provided technical support and troubleshooting to over 70 administrative staff members.</li>
+        <li>Managed over 300 user accounts with Active Directory and deployed system updates via SCCM.</li>
+        <li>Contributed to infrastructure improvements including AV cart installations, projector upgrades, and networking enhancements across classrooms.</li>
+      </ul>
+      <p><strong>WMU - Haworth College of Business</strong> — Recruitment Ambassador<br>Kalamazoo, MI | Jan 2024 – Present</p>
+      <ul>
+        <li>Led groups of prospective students and parents on engaging campus tours.</li>
+        <li>Supported over 100 individuals through Q&A sessions, events, and one-on-one admissions guidance.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Leadership & Involvement</h2>
+      <p><strong>Business Analytics & IT (BAIT)</strong> — President<br>WMU | Apr 2024 – Present</p>
+      <ul>
+        <li>Grew club membership by over 40% through revitalized events and outreach strategies.</li>
+        <li>Hosted 5+ employer spotlight events and networking sessions for tech-focused students.</li>
+        <li>Personally sourced nearly all guest speakers, including executive-level leaders and alumni professionals.</li>
+        <li>Recognized by department chair Dr. Muhammad Razi and Communication Center Director Beth Ernst for leadership and student empowerment.</li>
+      </ul>
+      <p><strong>Broncos IGNITE!</strong> — Leadership Program<br>WMU | 2024 – Present</p>
+      <ul>
+        <li>Selected by faculty for a competitive leadership cohort focused on personal development and peer mentorship.</li>
+      </ul>
+      <p><strong>Cybersecurity Club</strong> — Member<br>WMU | 2024 – Present</p>
+      <ul>
+        <li>Participated in cybersecurity workshops and co-led student panel at WMU’s Cybersecurity Summit.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Projects</h2>
+      <p><strong>Tech Jam</strong> — Co-Founder & Organizer<br>WMU | 2024</p>
+      <ul>
+        <li>Co-founded and organized WMU’s first Tech Jam: a hybrid hackathon, pitch, and social engineering competition.</li>
+        <li>Raised $5,500 in funding through sponsor outreach and university partnerships.</li>
+        <li>Led event design, logistics, and cross-disciplinary student engagement.</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Awards & Honors</h2>
+      <ul>
+        <li>1st Place – MWC3 ERP with Scrimmage Sim</li>
+        <li>3rd Place – MWC3 Data Analytics using Tableau</li>
+        <li>Dr. Bernadine P. Branchaw Scholarship</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>Skills</h2>
+      <ul>
+        <li>Java Programming – OOP, GUIs, and error handling</li>
+        <li>HTML Web Design – Portfolio and website development</li>
+        <li>Microsoft Office Suite – Excel, PowerPoint, and Word proficiency</li>
+        <li>Python (Basics) – Foundational scripting and logic</li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
-
-
